fixes bug where CSS styles for scenario1 would bleed into app nagivation ui

--- a/Samples/Notifications/js/Notifications/css/scenario1-pinningsecondarytiles.css
+++ b/Samples/Notifications/js/Notifications/css/scenario1-pinningsecondarytiles.css
@@ -1,23 +1,23 @@
-﻿img {
+﻿#scenario1 img {
     background-color: purple;
 }
 
-img.smalltile {
+#scenario1 img.smalltile {
     height: 71px;
     width: 71px;
 }
 
-img.mediumtile {
+#scenario1 img.mediumtile {
     height: 150px;
     width: 150px;
 }
 
-img.widetile {
+#scenario1 img.widetile {
     height: 150px;
     width: 310px;
 }
 
-img.largetile {
+#scenario1 img.largetile {
     height: 310px;
     width: 310px;
 }
